<?xml version="1.0"?>
<package>
  <name>director_ros</name>
  <version>0.1.0</version>
  <description>The director_ros package</description>
  <maintainer email="james.patrick.marion@gmail.com">Pat Marion</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/robotlocomotion/director</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
